# PyParamGUI

./: .all-contributorsrc  .cruft.json  .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  LICENSE  Makefile  README.md  changelog.md  pyproject.toml  requirements_pinned.txt
.github/: CODEOWNERS
.github/workflows/: autoupdate-pre-commit-config.yml  test.yml
docs/: Makefile  api_docs.md  conf.py  index.md  installation.md  make.bat  usage.md
pyparamgui/: __init__.py  config.py  generator.py  io.py  schema.py  utils.py  widget.py
pyparamgui/static/: form.css  form.js
tests/: __init__.py  test_dummy.py  test_simulate.py
